--- a/style/index.css
+++ b/style/index.css
@@ -1,1 +1,75 @@
 /* Add CSS styling here */
+/*Eric Meyer's CSS Reset */
+html, body, div, span, applet, object, iframe, table, caption, tbody, tfoot, thead, tr, th, td, 
+del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, 
+h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, 
+dl, dt, dd, ol, ul, li, fieldset, form, label, legend {
+	vertical-align: baseline;
+	font-family: inherit;
+	font-weight: inherit;
+	font-style: inherit;
+	font-size: 100%;
+	outline: 0;
+	padding: 0;
+	margin: 0;
+	/* border: 0; */
+	}
+/* remember to define focus styles! */
+:focus {
+	outline: 0;
+	}
+body {
+	background: white;
+	line-height: 1;
+	color: black;
+	}
+ol, ul {
+	list-style: none;
+    }
+
+/*General Styles*/
+
+* {
+    border: 1px solid black;
+    box-sizing: border-box;
+    font-size: 62.5%
+}
+
+a {
+    text-decoration: none;
+    font-size: 1.3rem;
+}
+
+/*Header Sytles*/
+
+header {
+    display: flex;
+    justify-content: space-between;
+    padding: 1%;
+}
+
+h2{
+    font-size: 2.7rem;
+}
+
+nav a{
+    display: inline-block;
+    text-align: center;
+    padding-top: 1.5%;
+    width: 25%;
+    border-radius: 10px;
+}
+
+header nav{
+    display: flex;
+    width: 30%;
+}
+
+/*First Section Style*/
+
+.background-img {
+    background-image:linear-gradient(rgba(184, 230, 248, 0.65), rgba(0, 0, 0, 0.50)), url('https://i.picsum.photos/id/1051/4928/3264.jpg?hmac=-O25O5Q9z7LI8gDrUkTUmDJir4F9cp1RadCwShIDGms');
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 90vh;
+}
