--- a/style/index.css
+++ b/style/index.css
@@ -72,4 +72,43 @@ header nav{
     background-size: cover;
     background-repeat: no-repeat;
     height: 90vh;
+    width: 170vh;
+    margin: 0 auto;
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: center;
+}
+
+h1{
+    font-size: 5rem;
+}
+
+/*Second Section Style*/
+
+.flex_img_txt {
+    height: 110vh;
+    width: 99vw;
+    display: flex;
+    flex-flow: column nowrap;
+    border: 2px solid red;
+    justify-content: space-between;
+    text-align: center;
+}
+
+.row {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+}
+
+.image_and_text {
+    font-size: 1rem;
+    height: 100%;
+    width: 100%;
+}
+
+.image_and_text img {
+    height: 100%;
+    widows: 100%;
 }
