add border radius and margin to background picture

--- a/style/index.css
+++ b/style/index.css
@@ -86,11 +86,12 @@ header nav{
     background-repeat: no-repeat;
     height: 90vh;
     width: 170vh;
-    margin: 0 auto;
+    margin: 5% auto 2% auto;
     display: flex;
     flex-flow: column;
     align-items: center;
     justify-content: center;
+    border-radius: 10%;
 }
 
 h1{
